# plastimatch

./: .gitignore  AUTHORS.TXT  CHANGELOG  CMakeLists.txt  CMakeLists_Junan.txt  COPYRIGHT.TXT  CTestConfig.cmake  FindLiblbfgs.cmake  FindNLopt.cmake  FindOctave.cmake  FindOpenCL.cmake  FindPantheios.cmake  FindRTK.cmake  FindSlicer.cmake  FindSqlite.cmake  GPUIT.cmake  INSTALL.TXT  LICENSE.TXT  MGHDRR_Options.h  MGHMtx_opts.h  NOTES.TXT  PLM_Etags.cmake  PLM_FindBrook.cmake  PLM_FindCUDA.cmake  PLM_FindCUDA_old.cmake  PLM_FindDCMTK.cmake  PLM_FindF2C.cmake  PLM_FindFFTW.cmake  PLM_FindFortran.cmake  PLM_FindSSE.cmake  PLM_FindSubversion.cmake  PLM_nvcc-check.cmake  PlastimatchLoadable.xml  README.BROOK.TXT  README.GPUIT.TXT  README.TXT  REGISTRATION.TXT  ROADMAP  ROADMAP.TXT  RUN_CTEST.cmake  (+676 more)
CUDA_tex_test/: CMakeLists.txt  tex_kernels.cu
CUDA_tex_test/cygwin build XP MSVC 2005/: CYGWIN_NT-5.1_i686.mak  Makefile
Testing/: CMakeLists.txt  CTestCustom.cmake  CTestCustom.cmake.cmake  CTestCustom.cmake.in  PLM_CTest_Check.cmake  PlmCheckInterval.cmake  PlmCheckString.cmake  PlmSpeedTest.cmake  PlmTestDebug.cmake  bspline_1.cxx  bspline_test_1.cxx  plm_registration_api_a.cxx
Testing/Data/: bragg-curve.txt  fiducials-rect-2.fcsv  fiducials-rect-2.txt  fiducials-rect-3.fcsv  fiducials-rect-3.txt  fixed-landmarks.fcsv  fixed-landmarks.txt  itk-affine-a.tfm  itk-rigid-a.tfm  itk-rigid-b.tfm  moving-landmarks.fcsv  moving-landmarks.txt  plastimatch-bspline-cuda.txt  plastimatch-itk-translation.txt  plastimatch-parms-1.txt  plastimatch-register-plm-bspline-single.txt  plm-bsp-char-output.txt  plm-bsp-cuda.txt  plm-bsp-dcos-a.txt  plm-bsp-dcos-b.txt  plm-bsp-dcos-c.txt  plm-bsp-dcos-d.txt  plm-bsp-dcos-e.txt  plm-bsp-dcos-f.txt  plm-bsp-dmap-k.txt  plm-bsp-double.txt  plm-bsp-gm-k.txt  plm-bsp-itk-output.txt  plm-bsp-landmark-a.txt  plm-bsp-landmark-b.txt  plm-bsp-landmark-c.txt  plm-bsp-landmark-d.txt  plm-bsp-landmark-e.txt  plm-bsp-logfile.txt  plm-bsp-mi-c-2.txt  plm-bsp-mi-c.txt  plm-bsp-mi-k.txt  plm-bsp-mse-c.txt  plm-bsp-mse-g.txt  plm-bsp-mse-h.txt  (+109 more)
extra/api_examples/: CMakeLists.txt  README.TXT  example_02.cxx  example_03.cxx  main.cxx
fatm/src/: CMakeLists.txt  clip_pat.cpp  clip_pat.h  config.h  fatm.cpp  fatm.h  fatm_bench.cpp  gpyr.cpp  gpyr.h  image.cpp  image.h  integral_img.cpp  integral_img.h  mexfancc.cpp  mexfncc.cpp  mexgpyr.cpp  mexgpyr_free.cpp  mexgpyr_img.cpp  mexmatch.cpp  mexncc.cpp  mext0.cpp  mext1.cpp  mext2.cpp  mexutils.cpp  mexutils.h  mexwncc.cpp  s_fancc.cpp  s_fancc.h  s_fncc.cpp  s_fncc.h  s_ncc.cpp  s_ncc.h  s_ncc_fft.cpp  s_ncc_fft.h  s_rssd.cpp  s_rssd.h  s_utils.cpp  s_utils.h  s_wncc.cpp  s_wncc.h  (+6 more)
libs/bstrlib-05122010/: CMakeLists.txt  bstrlib.c
libs/devillard/: CMakeLists.txt  README  quickselect.c  wirth.h
libs/gengetopt-2.22.4/: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in  configure
libs/libf2c/: CMakeLists.txt  README.PLASTIMATCH  c_cos.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  dtime_.c  err.c  f2c.h  open.c  tesuji_erf.c
libs/liblbfgs-1.9/: CMakeLists.txt
libs/lua-5.1.4/: CMakeLists.txt  README
libs/nkidecompress/: CMakeLists.txt  nkidecompress.cxx  nkidecompress.h
libs/nocedal/: CMakeLists.txt  README  lbfgsb_2_1.c
libs/specfun/: CMakeLists.txt  license.txt  mpbdv.c  mpbdv.for  readme.plastimatch
libs/sqlite-3.6.21/: CMakeLists.txt
src/: CMakeLists.txt
src/fatm/: CMakeLists.txt  README.TXT  clip_pat.cpp  config.h  fatm.cpp  fatm.h  fatm_bench.cpp  image.cpp  image.h  integral_img.h  iqt_image.cpp  iqt_image.h  match.cpp  match.h  mexfancc.cpp  mexmatch.cpp  mexmatch.def  mext0.cpp  mext1.cpp  mexutils.cpp  mexutils.h  s_fancc.cpp  s_fancc.h  s_fncc.cpp  s_ncc_fft.h  s_utils.cpp  s_utils.h  s_wncc.cpp  scorewin.cpp  scorewin.h  wirth.cpp
src/ise/: Acquire_4030e_DlgControl.cxx  Acquire_4030e_DlgControl.h  CMakeLists.txt  CMatrix.cpp  CMatrix.h  DlgProgress.ui  TODO.txt  YK16GrayImage.cxx  YK16GrayImage.h  YK16GrayImageITK.cxx  YK16GrayImageITK.h  YKOptionSetting.cxx  YKOptionSetting.h  acquire_4030e.cxx  acquire_4030e.qrc  acquire_4030e_child.cxx  acquire_4030e_child.h  acquire_4030e_define.h  acquire_4030e_main.cxx  acquire_4030e_panel.ui  acquire_4030e_parent.cxx  acquire_4030e_parent.h  acquire_4030e_window.cxx  acquire_4030e_window.h  acquire_4030e_window.ui  acquire_thread.cxx  acquire_thread.h  advantech.cxx  advantech.h  advantech_test.cxx  aqprintf.cxx  aqprintf.h  autosense.cxx  autosense.h  badpixeldetector.cpp  badpixeldetector.h  badpixeldetector.ui  badpixeldetector_main.cpp  bitflow.c  bitflow.h  (+101 more)
src/mondoshot/: CMakeLists.txt  mondoshot_dicom.cpp  mondoshot_main.cpp  mondoshot_main.h
src/oraifutils/: CMakeLists.txt  Doxyfile.in  LICENSE.txt  ORAIFUTILSConfig.cmake.in  ORAIFUTILSConfigVersion.cmake.in  README.txt
src/plastimatch/: CHANGELOG.TXT  CMakeLists.txt  COPYRIGHT.TXT  Doxyfile.in  PlastimatchLoadable.xml  README.BROOK.TXT  ROADMAP.TXT  STYLE_GUIDE_1.TXT  STYLE_GUIDE_2.TXT  astroid_dose.cxx  astroid_dose.h  autolabel.cxx  autolabel.h  autolabel_task.cxx  autolabel_task.h  autolabel_trainer.cxx  autolabel_trainer.h  bowtie_correction.c  bowtie_correction.cxx  bowtie_correction.h  bragg_curve_main.c  bragg_curve_opts.c  bspline.c  bspline.cxx  bspline.h  bspline_cuda.cpp  bspline_cuda.cu  bspline_cuda.h  bspline_cuda_old.cu  bspline_landmarks.c  bspline_landmarks.cxx  bspline_landmarks.h  bspline_macros.h  bspline_main.c  bspline_main.cxx  bspline_mi.c  bspline_mi.cxx  bspline_mi.h  bspline_mse.c  bspline_mse.cxx  (+531 more)
src/reg-2-3/: CMakeLists.txt  Doxyfile.in  ITFpool.ini  reg23-config-REFERENCE.ini  reg23-config-layout.ini  reg23.cxx  reg23.rc  reg23info.cxx  reg23info.h
src/slicer/: CMakeLists.txt  README.TXT  plastimatch_slicer_bspline.cxx  plastimatch_slicer_bspline.xml  plastimatch_slicer_dicomrt_export.cxx  plastimatch_slicer_dicomrt_export.xml  plastimatch_slicer_dicomrt_import.cxx  plastimatch_slicer_dicomrt_import.xml  plastimatch_slicer_dose_comparison.cxx  plastimatch_slicer_dose_comparison.xml  plastimatch_slicer_dvh.cxx  plastimatch_slicer_dvh.xml  (+8 more)
(+2390 files in other folders)
